Fix horizontal scroll on content screens

--- a/pompelup-web.css
+++ b/pompelup-web.css
@@ -608,6 +608,7 @@ input { font: inherit; outline: none; border: none; background: none; color: inh
   inset: 0;
   display: none;
   flex-direction: column;
+  overflow-x: hidden;
   overflow-y: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
